<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="VectorMove1D_t" Id="{f3cd3875-da19-466e-896d-89a00c6cff0b}">
    <Declaration><![CDATA[// Configuration structure for a VectorMove1D
// This configuration is typically stored inside a ricipies
TYPE VectorMove1D_t :
STRUCT
    lrVelocity : REAL;  // Velocity to position
    lrAccel    : REAL;  // acceleration to position
    lrDecel    : REAL;  // deceleration to position
    lrJerk     : REAL;  // jerk to position
    lrPosition : LREAL; // Position to go
    TriggerType : INT;   // the kind of trigger used
    TriggerPos  : LREAL; // trigger position, ignore if TriggerType is None
    Timeout_ms  : DINT;  // timeout value for this movement vector expressed in milisecond
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>